--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ p {
  <BODY>
 
   <canvas id="pinkboard"></canvas>
-  <div id="parent"><div id="child"></div><p style="color:white; font-size: 20; font-family: monospace; text-align: center;">Nhanh khỏi ốm <br> nhé chó</p></div></div>
+  <div id="parent"><div id="child"></div><p style="color:white; font-size: 20; font-family: monospace; text-align: center;">Chúc mừng <br> sinh nhật 🫡 <br> Nhanh khỏi ốm <br> nhé chó</p></div></div>
 
   <script>
 
